# alfred-syn-seq

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  MANUAL.md  README.md
alfred/: CMakeLists.txt
alfred/core/: CMakeLists.txt
alfred/core/include/alfred/: audio.hpp  math.hpp  synthesis.hpp  synthesizer.hpp
alfred/core/src/: audio.cpp  synthesis.cpp  synthesizer.cpp
alfred/gui/: CMakeLists.txt
alfred/gui/cmake/: imgui.cmake
alfred/gui/scripts/: generate.py
alfred/gui/src/: application.cpp  application.hpp  imgui.cpp  imgui.hpp  imgui.ini  logging.hpp  main.cpp  sequencer.cpp  sequencer.hpp  task.cpp  ui.cpp  ui.hpp  video.cpp  video.hpp
app/: CMakeLists.txt
app/cmake/: cereal.cmake  imgui.cmake
app/res/: alfred.desktop  alfred.rc  description.txt  imgui.ini
app/scripts/: embed.py  generate.py  version.py
app/src/: application.cpp  application.hpp  composition.cpp  composition.hpp  data.cpp  data.hpp  encoder.cpp  encoder.hpp  error.hpp  flat_set.hpp  image.cpp  image.hpp  imgui.cpp  imgui.hpp  logging.cpp  logging.hpp  main.cpp  preset.cpp  preset.hpp  sequencer.cpp  sequencer.hpp  task.cpp  task.hpp  ui.cpp  ui.hpp  utility.cpp  utility.hpp  video.cpp  video.hpp
cmake/: install.cmake  ipo.cmake  options.cmake  package.cmake  sanity_checks.cmake  sdl.cmake  target_options.cmake
compositions/: i_secretly_love_you.alfred  what.alfred
lib/: CMakeLists.txt
lib/audio/: CMakeLists.txt
lib/audio/include/alfred/: audio.hpp  real_synthesizer.hpp
lib/audio/src/: audio.cpp  real_synthesizer.cpp
lib/cmake/: fftw.cmake
lib/include/alfred/: allocator.hpp  audio.hpp  definitions.hpp  hash.hpp  instrument.hpp  instruments.hpp  math.hpp  mixer.hpp  preset.hpp  synthesis.hpp  synthesizer.hpp  voice.hpp
lib/instruments/: CMakeLists.txt
lib/instruments/include/alfred/: instruments.hpp
lib/instruments/src/: instruments.cpp
lib/src/: allocator.cpp  audio.cpp  instrument.cpp  instruments.cpp  math.cpp  preset.cpp  synthesis.cpp  synthesizer.cpp  voice.cpp
lib/synthesis/: CMakeLists.txt
lib/synthesis/cmake/: fftw.cmake
lib/synthesis/include/alfred/: allocator.hpp  definitions.hpp  hash.hpp  instruments.hpp  math.hpp  preset.hpp  synthesis.hpp  synthesizer.hpp
lib/synthesis/src/: instruments.cpp  math.cpp  preset.cpp  synthesis.cpp  synthesizer.cpp
lib/test/: CMakeLists.txt  main.cpp
presets/: test_instrument.preset
sampling/: .gitignore  harmonics.py  partials.py  partials_a3.txt
sampling/analysis/piano/a2/: a2.sv  partials_a2.txt  raw_partials.txt
sampling/analysis/piano/a3/: a3.sv  raw_partials.txt
sampling/analysis/piano/a4/: a4.sv  partials_a4.txt  raw_partials.txt
sampling/analysis/piano/a5/: a5.sv  partials_a5.txt  partials_c5.txt  raw_partials.txt
synthesizer/: CMakeLists.txt
synthesizer/cmake/: sdl.cmake
synthesizer/src/: application.cpp  application.hpp  audio.cpp  audio.hpp  main.cpp  math.hpp  synthesis.cpp  synthesis.hpp
